--- a/java2_aula_jdbc/nbproject/project.properties
+++ b/java2_aula_jdbc/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/java2_aula_jdbc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jaybird-full-3.0.3.jar=C:\\Users\\tiagoseibel\\Documents\\NetBeansProjects\\bibliotecas\\jaybird-full-3.0.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jaybird-full-3.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
